--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -12,9 +12,9 @@ body{
 
 :root {
     --tamanho-header: 80px;
-    --tamanho-banner: calc(100vh - var(--tamanho-header) - var(--tamanho-footer) - 2px);
+    --tamanho-banner: calc(63vh - var(--tamanho-header) - var(--tamanho-footer) - 2px);
     --tamanho-login: calc(100vh - var(--tamanho-header) - var(--tamnho-footer) - 2px);
-    --tamanho-footer: 65px;
+    --tamanho-footer: 100px;
 }
 
 .header {
@@ -36,7 +36,7 @@ body{
 
 .header a {
     text-decoration: none;
-    color: #e3b062;
+    color: #fff;
 
 }
 
@@ -56,7 +56,7 @@ body{
 .titulo {
     color: #32b9cd;
     width: fit-content;
-    font-weight: 800;
+    font-weight: 500;
 }
 
 .banner {
@@ -73,10 +73,9 @@ body{
 }
 
 .banner .container p{
-    width: 50%;
     margin: 0;
     padding: 0;
-    font-size: 36px;
+    font-size: 32px;
 }
 
 .banner .container span {
@@ -88,18 +87,25 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    justify-content: space-between;
 }
 
 .social .container .boxes {
     display: flex;
     justify-content: space-between;
+    flex-direction: column;
     width: 100%;
     padding: 30px 0;
 }
 
-.box {
+.social .alinhamento{
     display: flex;
     flex-direction: column;
+}
+
+.box {
+    display: flex;
+    flex-direction: row-reverse;
     align-items: center;
     text-align: center;
 }
@@ -113,7 +119,7 @@ body{
     height: var(--tamanho-footer);
     color: #fff;
     display: flex;
-    font-size: 15px;
+    font-size: 13px;
 }
 
 .footer .container{
@@ -122,11 +128,8 @@ body{
 }
 
 .version {
+    align-self: flex-start;
     font-size: 12px;
-}
-
-.box h4{
-    color: #EC155B;
 }
 
 .login {
