--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -88,6 +88,7 @@ body{
     justify-content: center;
     align-items: center;
     justify-content: space-between;
+    padding: 0px 15%;
 }
 
 .social .container .boxes {
@@ -95,7 +96,7 @@ body{
     justify-content: space-between;
     flex-direction: column;
     width: 100%;
-    padding: 30px 0;
+    padding: 0px 0;
 }
 
 .social .alinhamento{
