--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -88,7 +88,7 @@ body{
     justify-content: center;
     align-items: center;
     justify-content: space-between;
-    padding: 0px 15%;
+    padding: 3% 15%;
 }
 
 .social .container .boxes {
