--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -19,7 +19,7 @@ body{
 
 .header {
     height: var(--tamnho-header);
-    border-bottom: 2px solid #32b9cd;
+    border-bottom: 5px solid #32b9cd;
 }
 
 .container {
@@ -73,6 +73,8 @@ body{
 }
 
 .banner .container p{
+    text-align: center;
+    width: 80%;
     margin: 0;
     padding: 0;
     font-size: 32px;
