--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -12,14 +12,14 @@ body{
 
 :root {
     --tamanho-header: 80px;
-    --tamanho-banner: calc(63vh - var(--tamanho-header) - var(--tamanho-footer) - 2px);
+    --tamanho-banner: calc(100vh - var(--tamanho-header) - var(--tamanho-footer) - 2px);
     --tamanho-login: calc(100vh - var(--tamanho-header) - var(--tamnho-footer) - 2px);
-    --tamanho-footer: 100px;
+    --tamanho-footer: 65px;
 }
 
 .header {
     height: var(--tamnho-header);
-    border-bottom: 5px solid #32b9cd;
+    border-bottom: 2px solid #32b9cd;
 }
 
 .container {
@@ -36,7 +36,7 @@ body{
 
 .header a {
     text-decoration: none;
-    color: #fff;
+    color: #e3b062;
 
 }
 
@@ -56,7 +56,7 @@ body{
 .titulo {
     color: #32b9cd;
     width: fit-content;
-    font-weight: 500;
+    font-weight: 800;
 }
 
 .banner {
@@ -73,11 +73,10 @@ body{
 }
 
 .banner .container p{
-    text-align: center;
-    width: 80%;
+    width: 50%;
     margin: 0;
     padding: 0;
-    font-size: 32px;
+    font-size: 36px;
 }
 
 .banner .container span {
@@ -89,26 +88,18 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    justify-content: space-between;
-    padding: 3% 15%;
 }
 
 .social .container .boxes {
     display: flex;
     justify-content: space-between;
-    flex-direction: column;
     width: 100%;
-    padding: 0px 0;
-}
-
-.social .alinhamento{
-    display: flex;
-    flex-direction: column;
+    padding: 30px 0;
 }
 
 .box {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column;
     align-items: center;
     text-align: center;
 }
@@ -122,7 +113,7 @@ body{
     height: var(--tamanho-footer);
     color: #fff;
     display: flex;
-    font-size: 13px;
+    font-size: 15px;
 }
 
 .footer .container{
@@ -131,8 +122,11 @@ body{
 }
 
 .version {
-    align-self: flex-start;
     font-size: 12px;
+}
+
+.box h4{
+    color: #EC155B;
 }
 
 .login {
